tried to add a hover, but it doesnt work when adding the hover

--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,11 @@ body {
   .task-card:hover {
     cursor: grab;
   }
+  .task:hover {
+    cursor: pointer;
+  }
+  /*.task {
+    padding: 2rem;
+    border-radius: 6px;
+    box-shadow: 8px 4px 4px rgba(0, 0, 0, 0.6);
+  } */
