--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,9 @@ body {
   .task-card:hover {
     cursor: grab;
   }
-  .task:hover {
+  /* .task:hover {
     cursor: pointer;
-  }
+  } */
   /*.task {
     padding: 2rem;
     border-radius: 6px;
